--- a/source/styles/_hero.scss
+++ b/source/styles/_hero.scss
@@ -48,10 +48,12 @@
         margin: 0 auto;
         text-align: center;
         position: relative;
-        margin-top: 20px;
+        margin-top: 10px;
         font-size: 40px;
         color: #fff;
         max-width: 600px;
+        line-height: 30px;
+
 
         input,
         button {
@@ -60,7 +62,7 @@
         }
 
         button {
-            margin-bottom: 160px;
+            margin-bottom: 5px;
         }
 
         input {
@@ -70,7 +72,8 @@
             border-bottom: 1px solid #fff;
             background-color: transparent;
             width: 100%;
-            height: 100px;
+            height: 80px;
+            margin-bottom: 15px;
             transition: all .3s ease;
         }
 
@@ -83,6 +86,8 @@
             color: goldenrod;
             font-size: 25px;
             height: 100px;
+            margin-top: 0;
+            margin-bottom: 100px;
         }
 
     }
@@ -91,7 +96,7 @@
         position: absolute;
         bottom: 0;
         left: 0;
-        height: 80px;
+        height: 90px;
         width: 100%;
         border-radius: 20px 20px 0 0;
         background-color: #fff;
